--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Moving forward the work done by Daniel Rendall towards the MathML target ...
+Moving forward the work done by Daniel Rendall& Sukii towards the MathML target ...
